--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.9</version>
                 <configuration>
-                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <imageName>${docker.image.prefix}/binitdatta</imageName>
                     <dockerDirectory>src/main/docker</dockerDirectory>
                     <resources>
                         <resource>
