--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>com.programmingfree.springservice.Application</start-class>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
+		<docker.image.prefix>binitdatta</docker.image.prefix>
 	</properties>
+	
+	
 
 	<build>
 		<plugins>
@@ -49,7 +52,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.9</version>
                 <configuration>
-                    <imageName>${docker.image.prefix}/binitdatta</imageName>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                     <dockerDirectory>src/main/docker</dockerDirectory>
                     <resources>
                         <resource>
